# raft

./: .coderabbit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  README.md  UCXX_BRANCH  UCXX_VERSION  build.sh  deep-image-96-inner_faiss_gpu_ivf_pq,large,k10,bs1_6b0505b0-b133-11ee-9b2e-d85ed30db299.json  deep-image-96-inner_faiss_gpu_ivf_pq,largeraft,k10,bs10000_ead3b658-b456-11ee-a2f6-d85ed30db299.json  deep-image-96-inner_faiss_gpu_ivf_pq,largeraft,k10,bs10_d07cc3f6-b01b-11ee-803e-d85ed30db299.json  deep-image-96-inner_faiss_gpu_ivf_pq,largeraft,k10,bs1_4e75bea8-b01b-11ee-8f6e-d85ed30db299.json  deep-image-96-inner_raft_ivf_pq,large,k10,bs10000_d3a4369e-b459-11ee-bb9e-d85ed30db299.json  dependencies.yaml  fetch_rapids.cmake  log.txt  pyproject.toml  rapids_config.cmake  rmm_log.txt  scratch.md  setup.cfg  test.py
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile.in  REVIEW_GUIDELINES.md  setup.cfg  setup.py
cpp/bench/: CMakeLists.txt  main.cpp
cpp/bench/ann/: CMakeLists.txt  README.md  algos.yaml
cpp/bench/cluster/: kmeans.cu  kmeans_balanced.cu
cpp/bench/common/: benchmark.hpp
cpp/bench/distance/: distance_common.cuh  distance_cosine.cu  distance_exp_l2.cu  distance_l1.cu  distance_unexp_l2.cu  fused_l2_nn.cu  kernels.cu  masked_l2_nn.cu  masked_nn.cu  sparse_l2_nn.cu
cpp/bench/linalg/: add.cu  map_then_reduce.cu  matrix_vector_op.cu  norm.cu  normalize.cu  reduce.cu  reduce_cols_by_key.cu  reduce_rows_by_key.cu
cpp/bench/matrix/: argmin.cu  gather.cu  select.cu  select_k.cu
cpp/bench/neighbors/: fused_l2_nn.cu  knn.cuh  refine.cu  refine.cuh  refine_float_int64_t.cu  refine_float_uint64_t.cu  refine_uint8_t_int64_t.cu  refine_uint8_t_uint64_t.cu  selection.cu
cpp/bench/prims/: CMakeLists.txt  main.cpp
cpp/bench/random/: make_blobs.cu  permute.cu  rng.cu
cpp/bench/sparse/: convert_csr.cu
cpp/bench/spatial/: fused_l2_nn.cu  knn.cu  knn.cuh  selection.cu
cpp/cmake/: Dependencies.cmake  EvalGpuArchs.cmake  FindNCCL.cmake  FindUCX.cmake  comms.cmake  config.json  doxygen.cmake  raft-config.cmake.in  versions.json
cpp/cmake/modules/: ConfigureCUDA.cmake  EvalGPUArchs.cmake  FindAVX.cmake  SetGPUArchs.cmake  config.cmake.in  raft_export.cmake
cpp/cmake/patches/: cutlass_override.json  diskann.diff  diskann_override.json  faiss_override.json  ggnn.diff  ggnn.patch  ggnn_override.json  hnswlib.diff  hnswlib.patch  hnswlib_override.json  nlohmann_json.patch
cpp/cmake/templates/: CMakeLists.txt
cpp/cuann_bench/: CMakeLists.txt  README.md
cpp/cuann_bench/conf/: bigann-100M.json  bigann-1B.json  deep-100M.fp16.json  deep-100M.json  deep-1B.json  glove-100-inner.json  sift-128-euclidean.json
cpp/cuann_bench/src/: benchmark.cpp  benchmark.cu  conf.h  factory.cuh  factory.h  faiss_wrapper.h  ggnn_wrapper.cuh  hnswlib_wrapper.h  multigpu.cuh  util.h
cpp/doxygen/: Doxyfile  Doxyfile.in  main_page.md  rapids.css
cpp/include/: raft.hpp
cpp/include/atomic_queue/: atomic_queue.h
cpp/include/raft/: allocator.hpp  buffer_base.hpp  cancellable.hpp  coalesced_access.cuh  cuda_utils.cuh  cudart_utils.h  debug_utils.cuh  device_atomics.cuh  device_buffer.hpp  device_utils.cuh  error.hpp  graph.hpp  handle.hpp  host_buffer.hpp  integer_utils.h  interruptible.hpp  iterator_traits.hpp  mdarray.h  mdarray.hpp  pow2_utils.cuh  span.hpp  vectorized.cuh
cpp/include/raft_client/: cudart_utils.hpp  handle.hpp  interruptible.hpp
cpp/include/raft_core/: cudart_utils.hpp  handle.hpp  interruptible.hpp
cpp/include/raft_distance/: fused_l2_min_arg.hpp  kmeans.hpp  pairwise_distance.hpp
cpp/include/raft_frontend/: cudart_utils.hpp  handle.hpp  interruptible.hpp
cpp/include/raft_public/: cudart_utils.hpp  handle.hpp  interruptible.hpp
cpp/include/raft_random/: rmat_rectangular_generator.hpp
cpp/include/raft_runtime/: comms.hpp  cublas_macros.hpp  cudart_utils.hpp  cusolver_macros.hpp  cusparse_macros.hpp  error.hpp  handle.hpp  interruptible.hpp  raft.hpp
cpp/internal/: CMakeLists.txt
cpp/libraft/: _version.py
cpp/scripts/: __clang_cuda_additional_intrinsics.h  analyze_nvcc_log.py  gitutils.py  include_checker.py  run-clang-compile.py  run-clang-format.py  run-clang-tidy.py  run-cmake-format.sh
cpp/src/cluster/: cluster_cost.cuh  cluster_cost_double.cu  cluster_cost_float.cu  kmeans_fit_double.cu  kmeans_fit_float.cu  kmeans_init_plus_plus_double.cu  kmeans_init_plus_plus_float.cu  update_centroids_double.cu  update_centroids_float.cu
cpp/src/core/: c_api.cpp  logger.cpp
cpp/src/distance/: cluster_cost.cuh  cluster_cost_double.cu  cluster_cost_float.cu  distance.cu  fused_distance_nn.cu  fused_l2_min_arg.cu  fused_l2_nn.cu  kmeans_fit_double.cu  kmeans_fit_float.cu  pairwise_distance.cu  update_centroids.cuh  update_centroids_double.cu  update_centroids_float.cu
cpp/src/neighbors/: ann_mg.cu  (+48 more)
cpp/template/: CMakeLists.txt  README.md  build.sh
cpp/test/: CMakeLists.txt  cluster_solvers.cu  cluster_solvers2.cu  cluster_solvers_deprecated.cu  cuda_utils.cu  cudart_utils.cpp  device_atomics.cu  device_buffer.cpp  device_id.cpp  device_type.cpp  eigen_solvers.cu  fixture.hpp  handle.cpp  host_buffer.cpp  integer_utils.cpp  interruptible.cu  iterator_traits.cpp  mdarray.cu  mdspan_utils.cu  memory_type.cpp  mst.cu  nvtx.cpp  pow2_utils.cu  preprocess_utils.cu  serialization.cpp  span.cpp  span.cu  spectral_matrix.cpp  spectral_matrix.cu  spectral_solvers.cpp  spectral_solvers.cu  test.cpp  test_span.hpp  test_utils.cuh  test_utils.h
cpp/tests/: CMakeLists.txt  test.cpp  test_utils.cuh  test_utils.h
python/libraft/: CMakeLists.txt  pyproject.toml
python/pylibraft/: .coveragerc  .flake8  .flake8.cython  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  setuputils.py  versioneer.py
python/raft/: CMakeLists.txt  __init__.py  _version.py  record.txt  setup.cfg  setup.py  setuputils.py  versioneer.py
python/raft-dask/: .coveragerc  CMakeLists.txt  MANIFEST.in  pyproject.toml  pytest.ini  record.txt  setup.cfg  setup.py  setuputils.py  versioneer.py
(+3619 files in other folders)
